lanecwe-Prod/src/objects/Acct_Scorecard__c.object
<CustomObject>
    <description>To show each months Status Dashboard</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Acct Scorecards</relationshipLabel>
        <relationshipName>Acct_Scorecards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Acct_Scorecard_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acct Scorecard Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Acct_Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Performance_Detail__c</fullName>
        <label>Financial Performance Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Financial_Performance_Icon__c</fullName>
        <description>&quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;, 
&quot;Yellow&quot;, &quot;/img/samples/light_yellow.gif&quot;, 
&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;,  &quot;/s.gif&quot;),  &quot;status color&quot;)</description>
        <formula>IMAGE(  CASE( Financial_Performance_Rating__c ,  
&quot;Green&quot;, &quot;/servlet/servlet.FileDownload?file=015a0000002Z57B&quot;, 
&quot;Yellow&quot;, &quot;/servlet/servlet.FileDownload?file=015a0000002Z57D&quot;, 
&quot;Red&quot;, &quot;/servlet/servlet.FileDownload?file=015a0000002Z57C&quot;,  &quot;/s.gif&quot;),  &quot;status color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Performance Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Performance_Rating__c</fullName>
        <label>Financial Performance Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Growth_Opportunities_Detail__c</fullName>
        <label>Growth Opportunities Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Growth_Opportunities_Icon__c</fullName>
        <formula>IMAGE(  CASE( Growth_Opportunities_Rating__c ,  
&quot;Green&quot;, &quot;/servlet/servlet.FileDownload?file=015a0000002Z57B&quot;, 
&quot;Yellow&quot;, &quot;/servlet/servlet.FileDownload?file=015a0000002Z57D&quot;, 
&quot;Red&quot;, &quot;/servlet/servlet.FileDownload?file=015a0000002Z57C&quot;,  &quot;/s.gif&quot;),  &quot;status color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Growth Opportunities Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Growth_Opportunities_Rating__c</fullName>
        <label>Growth Opportunities Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Delivery_Detail__c</fullName>
        <label>Project Delivery Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Delivery_Icon__c</fullName>
        <formula>IMAGE(  CASE( Project_Delivery_Rating__c ,  
&quot;Green&quot;, &quot;/servlet/servlet.FileDownload?file=015a0000002Z57B&quot;, 
&quot;Yellow&quot;, &quot;/servlet/servlet.FileDownload?file=015a0000002Z57D&quot;, 
&quot;Red&quot;, &quot;/servlet/servlet.FileDownload?file=015a0000002Z57C&quot;,  &quot;/s.gif&quot;),  &quot;status color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Delivery Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Delivery_Rating__c</fullName>
        <label>Project Delivery Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_Health_Detail__c</fullName>
        <label>Relationship Health Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Relationship_Health_Icon__c</fullName>
        <formula>IMAGE(  CASE( Relationship_Health_Rating__c  ,  
&quot;Green&quot;, &quot;/servlet/servlet.FileDownload?file=015a0000002Z57B&quot;, 
&quot;Yellow&quot;, &quot;/servlet/servlet.FileDownload?file=015a0000002Z57D&quot;, 
&quot;Red&quot;, &quot;/servlet/servlet.FileDownload?file=015a0000002Z57C&quot;,  &quot;/s.gif&quot;),  &quot;status color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Health Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Health_Rating__c</fullName>
        <label>Relationship Health Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scorecard_Month__c</fullName>
        <label>Scorecard Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scorecard_Year__c</fullName>
        <defaultValue>LEFT(TEXT(TODAY()), 4)</defaultValue>
        <label>Scorecard Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Delivery_Detail__c</fullName>
        <label>Service Delivery Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Service_Delivery_Icon__c</fullName>
        <formula>IMAGE(  CASE( Service_Delivery_Rating__c ,  
&quot;Green&quot;, &quot;/servlet/servlet.FileDownload?file=015a0000002Z57B&quot;, 
&quot;Yellow&quot;, &quot;/servlet/servlet.FileDownload?file=015a0000002Z57D&quot;, 
&quot;Red&quot;, &quot;/servlet/servlet.FileDownload?file=015a0000002Z57C&quot;,  &quot;/s.gif&quot;),  &quot;status color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Delivery Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Delivery_Rating__c</fullName>
        <label>Service Delivery Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Usage_Detail__c</fullName>
        <label>Service Usage Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Service_Usage_Icon__c</fullName>
        <formula>IMAGE(  CASE( Service_Usage_Rating__c ,  
&quot;Green&quot;, &quot;/servlet/servlet.FileDownload?file=015a0000002Z57B&quot;, 
&quot;Yellow&quot;, &quot;/servlet/servlet.FileDownload?file=015a0000002Z57D&quot;, 
&quot;Red&quot;, &quot;/servlet/servlet.FileDownload?file=015a0000002Z57C&quot;,  &quot;/s.gif&quot;),  &quot;status color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Usage Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Usage_Rating__c</fullName>
        <label>Service Usage Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Acct Scorecard</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Acct Scorecard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Acct Scorecards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>